# DistributedFileSystem

./: CMakeLists.txt  README.md  confLocalsystem.sh  config2.txt  configureBash1.sh~  confsystem.sh  confsystem.sh~  myfile.txt  myfile.txt~  readers5.sh~
Client/: cli  client.c  client.c~  client.h  config.txt  config.txt~  config2.txt  config2.txt~  confsystem1.sh~  makefile  permission.txt  readers1.sh  readers5.sh~  senario1.txt~  settings  temp.txt  temp.txt~  test.txt  tmp.txt~  tmux.sh~  un1.sh~  un2.sh~  un3.sh~  un4.sh~  un5.sh~  unitest.sh  unitest.sh~
Directory/: dir  directory.c  directory.h  makefile
Experiments/: readers5.sh  readers5.sh~  writers100.sh  writers20.sh
File Manager/: filemanager.c
FileManager/: fil  filemanager.c  filemanager.h
Interface/: base  client.c  client.c~  clientmodify.c~  config.txt~  gui.c  gui.c~  gui2.c  gui2.c~  gui3.c  gui4.c  gui4.c~  gui5.c  gui5.c~  gui6.c  gui6.c~  gui7.c  gui8.c  gui8.c~  gui9.c  interf  makefile  makefile~  nicolas.txt~  tem3.txt~  test.txt~  test2.txt  tmp
Interface/Client/: client.c  client1.c  client1.h  config.txt  interf  permission.txt  readers1.sh~  test.txt  test.txt~  unitest.sh~
Replica/: repli  replica.c  replica.h
Scenarios/: 10Readers.sh~  1Reader.sh~  senario1.txt~  senario2.txt~  unitest.sh~  unitest1.sh~
Scenarios/ReaderAlone/: 10writers.sh  10writers.sh~  1writer.sh  1writer.sh~
Scenarios/Readers/: 10Readers.sh  1Reader.sh~  20Readers.sh  un3.sh
Scenarios/SavedScenarios/: readers2.txt  readers_1.txt
Scenarios/Scenario1/: 10writers.sh  10writers.sh~  1writer.sh  20writers.sh  20writers.sh~  30writers.sh  30writers.sh~  40writers.sh  40writers.sh~  allwriters.sh  senario1.txt  senario1.txt~
Scenarios/Scenario2/: 10readers.sh  10readers.sh~  10writers.sh~  1reader.sh  1reader.sh~  1writer.sh~  20readers.sh  20readers.sh~  20writers.sh~  30readers.sh  30readers.sh~  30writers.sh~  40readers.sh  40readers.sh~  40writers.sh~  allwriters.sh~
Scenarios/Scenario3/: 1writer.sh  2writer.sh  2writer.sh~  3writer.sh  3writer.sh~  4writer.sh~  allwriter (copy).sh  allwriter.sh  senario1.txt  senario3.txt
Scenarios/Scenario5/: 10writers.sh~  1writer.sh~  2writer.sh  3writer.sh~  4writer.sh  allwriter.sh  allwriter.sh~
Scripts/: .tmux.conf  confRemoteSer.sh  config2.txt  myfile.txt  remSer.sh  settings  tmux.sh  tmux.sh~  tmux1.conf  tmux1.sh~  un3.sh~  writers1.sh  writers1.sh~  writers100.sh
(+16 files in other folders)
